# linear-regression-from-scratch

./: .gitignore  CMakeLists.txt  README.md
examples/: bostonHousing.cpp
include/: CSVReader.hpp  LinearRegression.hpp  Matrix.hpp
src/: CSVReader.cpp  LinearRegression.cpp  Matrix.cpp
